<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/rounded_rectangle"
              android:padding="8dp">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/dialog_add_person"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/dialog_add_person"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:gravity="center"
            />

    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />

    <EditText
            android:id="@+id/firstNameInput"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/first_name"
            android:autofillHints="name"/>

    <EditText
            android:id="@+id/lastNameInput"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/last_name"
            android:autofillHints="name"/>

    <EditText
            android:id="@+id/emailInput"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:autofillHints="emailAddress"/>

    <EditText
            android:id="@+id/ageInput"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/age"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical">

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="12dp"/>

        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteButton"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="12dp"/>

    </LinearLayout>

</LinearLayout>