<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/rounded_rectangle">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/delete_person"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/dialog_add_person"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:gravity="center"
            />

    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />

    <TextView
            android:text="Are you sure you want to delete this person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="#1C1C1C"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical">

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="12dp"/>

        <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteButton"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="12dp"/>

    </LinearLayout>

</LinearLayout>