<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/user_follow_line"
                android:id="@+id/editPersonConfirm"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:backgroundTint="@color/white"
                android:onClick="onEditButtonClick"
                android:clickable="true"
                android:focusable="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/rounded_rectangle"
                android:elevation="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:ems="10"
                    android:id="@+id/editTextFirstName"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/rounded_rectangle"
                android:elevation="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:ems="10"
                    android:id="@+id/editTextLastName"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/rounded_rectangle"
                android:elevation="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:ems="10"
                    android:id="@+id/editTextEmail"
                    android:layout_weight="1"
                    android:hint="email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck"
                    android:autofillHints="emailAddress"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/rounded_rectangle"
                android:elevation="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:ems="10"
                    android:id="@+id/editTextAge"
                    android:layout_weight="1"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>